release: AID v1.0.0-beta.7